Fix profile image persistence, cache refresh, and default avatar